<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/i_view"
        android:layout_width="137dp"
        android:layout_height="105dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logos"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo1"
        android:visibility="invisible" />


    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/banking_system"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_green_light"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible"></TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/designed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_by"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="invisible"></TextView>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Naresh_Apat"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="invisible"></TextView>

    </LinearLayout>



</RelativeLayout>