<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    android:layout_marginBottom="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000B01"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"></TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/phone"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/todo"></ImageView>

            <TextView
                android:id="@+id/userphonenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_numebr"
                android:textSize="15sp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/rupee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#FFC107"></TextView>

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#FFC107"></TextView>
            <TextView
                android:id="@+id/rupeeslash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" /-"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#FFC107"></TextView>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>